--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,15 @@ repositories {
     maven {
         url = "https://jitpack.io"
     }
+    maven {
+        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
+    }
 }
 
 dependencies {
     implementation 'org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT'
     compileOnly "com.github.MilkBowl:VaultAPI:1.7"
+    compileOnly 'me.clip:placeholderapi:2.11.5'
 }
 
 test {
