--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,9 @@ name: RivalCore
 main: me.rival.dev.Main
 version: 1.0-FINAL
 authors: [Rival Development, Strokkur24]
+depend:
+  - PlaceholderAPI
+  - Vault
 commands:
   ads:
     aliases: [adban]
