--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'java'
 }
 
-group = 'me.rival.dev'
-version = '1.0-SNAPSHOT'
+group = 'net.strokkur'
+version = ''
 
 repositories {
     mavenCentral()
